updated readme for everyone